crates/servicepoint_binding_c/examples/lang_c/include/servicepoint.h

/**
 * A low-level display command.
 *
 * This struct and associated functions implement the UDP protocol for the display.
 *
 * To send a `SPCommand`, use a `SPConnection`.
 *
 * # Examples
 *
 * ```C
 * sp_connection_send_command(connection, sp_command_clear());
 * sp_connection_send_command(connection, sp_command_brightness(5));
 * ```
 */
typedef struct SPCommand SPCommand;
/**
 * A connection to the display.
 *
 * # Examples
 *
 * ```C
 * CConnection connection = sp_connection_open("172.23.42.29:2342");
 * if (connection != NULL)
 *     sp_connection_send_command(connection, sp_command_clear());
 * ```
 */
typedef struct SPConnection SPConnection;
/**
 * The raw packet
 */
typedef struct SPPacket SPPacket;
/**
 * Closes and deallocates a `SPConnection`.
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `this` points to a valid `SPConnection`
 * - `this` is not used concurrently or after this call
 */
void sp_connection_free(struct SPConnection *ptr);
/**
 * Creates a new instance of `SPConnection`.
 *
 * returns: NULL if connection fails, or connected instance
 *
 * # Panics
 *
 * Bad string encoding
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - the returned instance is freed in some way, either by using a consuming function or
 *   by explicitly calling `sp_connection_free`.
 */
struct SPConnection *sp_connection_open(const char *host);
/**
 * Sends a `SPCommand` to the display using the `SPConnection`.
 *
 * The passed `SPCommand` gets consumed.
 *
 * returns: true in case of success
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `connection` points to a valid instance of `SPConnection`
 * - `command` points to a valid instance of `SPPacket`
 * - `command` is not used concurrently or after this call
 */
bool sp_connection_send_command(const struct SPConnection *connection,
                                struct SPCommand *command);
/**
 * Sends a `SPPacket` to the display using the `SPConnection`.
 *
 * The passed `SPPacket` gets consumed.
 *
 * returns: true in case of success
 *
 * # Safety
 *
 * The caller has to make sure that:
 *
 * - `SPConnection` points to a valid instance of `SPConnection`
 * - `SPPacket` points to a valid instance of `SPPacket`
 * - `SPPacket` is not used concurrently or after this call
 */
bool sp_connection_send_packet(const struct SPConnection *connection,
                               struct SPPacket *packet);